# scrapling-schema

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/: README.md
example/article/: expected.json  page.html  spec.yml
example/product_list/: expected.json  page.html  spec.yml
example/profiles/: expected.json  page.html  spec.yml
src/scrapling_schema/: __init__.py  cli.py  core.py  types.py
tests/: test_callback_transform_examples.py  test_changelog_script.py  test_extractor.py  test_json_schema.py  test_more_scenarios.py  test_output_schema_override.py  test_release_scripts.py  test_spec_validation.py  test_typed_schema.py
